name:                z
version:             0.1.0.0
synopsis:            Z.
description:         Z.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2012 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable z
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base > 4 && < 5,
                     text,
                     parsec,
                     containers,
                     mtl